Contact center alignment correction

--- a/src/containers/Contact.module.scss
+++ b/src/containers/Contact.module.scss
@@ -1,3 +1,5 @@
 .main {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
